# ARM64-ADK

./: .gitignore  AADK_Replacement_Writeup.txt  AGENTS.md  Cargo.toml  LICENSE  MainActivity.kt  README.md
CS492_Assignment1_RosenauJ/CS492A1RosenauJ/: gradle.properties  settings.gradle.kts
CS492_Assignment1_RosenauJ/CS492A1RosenauJ/app/: build.gradle.kts
CS492_Assignment1_RosenauJ/CS492A1RosenauJ/app/src/main/: AndroidManifest.xml
CS492_Assignment1_RosenauJ/CS492A1RosenauJ/app/src/main/java/com/example/cs492a1rosenauj/: MainActivity.kt
CS492_Assignment1_RosenauJ/CS492A1RosenauJ/app/src/main/res/values/: strings.xml
CS492_Assignment1_RosenauJ/CS492A1RosenauJ/app/src/main/res/values-night/: themes.xml
EmptyActivity/: settings.gradle.kts
EmptyActivity/app/: build.gradle.kts
EmptyActivity/app/src/main/: AndroidManifest.xml
EmptyActivity/app/src/main/java/com/example/emptyactivity/: MainActivity.kt
EmptyActivity/app/src/main/java/com/example/emptyactivity/ui/theme/: Color.kt  Theme.kt  Type.kt
EmptyActivity/app/src/main/res/drawable/: ic_launcher_foreground.xml
EmptyActivity/app/src/main/res/values-night/: themes.xml
SampleConsole/: settings.gradle.kts
SampleConsole/app/: build.gradle.kts
SampleConsole/app/src/main/: AndroidManifest.xml
SampleConsole/app/src/main/java/com/example/sampleconsole/: MainActivity.kt
SampleConsole/app/src/main/res/values/: strings.xml
SampleConsole/app/src/main/res/values-night/: themes.xml
SampleConsole/gradle/wrapper/: gradle-wrapper.properties
SampleProg/: gradle.properties  gradlew  settings.gradle.kts
SampleProg/app/: build.gradle.kts
SampleProg/app/src/main/: AndroidManifest.xml
SampleProg/app/src/main/java/com/example/sampleprog/: MainActivity.kt
SampleProg/app/src/main/res/values/: strings.xml  themes.xml
crates/aadk-build/: AGENTS.md  Cargo.toml
crates/aadk-build/src/: main.rs
crates/aadk-cli/: AGENTS.md  Cargo.toml
crates/aadk-cli/src/: main.rs
crates/aadk-core/: AGENTS.md  Cargo.toml
crates/aadk-core/src/: main.rs
crates/aadk-observe/: AGENTS.md  Cargo.toml
crates/aadk-observe/src/: main.rs
crates/aadk-project/: AGENTS.md  Cargo.toml
crates/aadk-project/src/: main.rs
crates/aadk-project/templates/: registry.json
crates/aadk-proto/: Cargo.toml  build.rs
crates/aadk-proto/src/: lib.rs
crates/aadk-targets/: AGENTS.md  Cargo.toml
crates/aadk-targets/src/: adb.rs  cuttlefish.rs  ids.rs  jobs.rs  main.rs  service.rs  state.rs
crates/aadk-telemetry/: AGENTS.md  Cargo.toml
crates/aadk-telemetry/src/: lib.rs
crates/aadk-toolchain/: AGENTS.md  Cargo.toml  catalog.json
crates/aadk-toolchain/fixtures/: ndk-r29.tar.zst  sdk-36.0.0.tar.zst
crates/aadk-toolchain/src/: artifacts.rs  cancel.rs  catalog.rs  hashing.rs  jobs.rs  main.rs  provenance.rs  service.rs  state.rs  verify.rs
crates/aadk-ui/: AGENTS.md  Cargo.toml
crates/aadk-ui/src/: commands.rs  config.rs  main.rs  models.rs  pages.rs  ui_events.rs  ui_state.rs  utils.rs  worker.rs
crates/aadk-util/: Cargo.toml
crates/aadk-util/src/: lib.rs
crates/aadk-workflow/: AGENTS.md  Cargo.toml
crates/aadk-workflow/src/: main.rs
docs/: ARM64.mkv  release.md
packaging/deb/: aadk.desktop  control.in  postinst
proto/aadk/v1/: AGENTS.md  build.proto  common.proto  errors.proto  job.proto  observe.proto  project.proto  target.proto  toolchain.proto  workflow.proto
scripts/dev/: run-all.sh
scripts/release/: aadk-start.sh  build-deb.sh  build.sh
