[package]
name = "aadk-build"
version = "0.1.0"
edition = "2021"

[dependencies]
aadk-proto = { path = "../aadk-proto" }

tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "time", "sync", "process", "io-util"] }
tonic = "0.12"
prost = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
