[package]
name = "aadk-targets"
version = "0.1.0"
edition = "2021"

[dependencies]
aadk-proto = { path = "../aadk-proto" }
aadk-telemetry = { path = "../aadk-telemetry" }
aadk-util = { path = "../aadk-util" }

tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "time", "sync", "process", "io-util"] }
tonic = "0.12"
prost = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
