[package]
name = "aadk-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
aadk-proto = { path = "../aadk-proto" }
aadk-telemetry = { path = "../aadk-telemetry" }
aadk-util = { path = "../aadk-util" }

gtk4 = "0.9"
glib = "0.20"

tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "time", "sync"] }
tonic = "0.12"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
